--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,27498],[[4,5,6,0,[],[0,31,27461],[],[[7,0,1,0,[],[0,303,27186,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22053],[[4,5,6,0,[],[1,31,22014],[],[[7,0,1,0,[],[1,306,21734],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product","*Variable '${title}' not found. Did you mean:\n    ${titlt}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:27","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:27","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0},{"elapsed":"00:00:27","fail":1,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583413923657;
+window.output["baseMillis"] = 1583418313452;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27513;
+window.output["generated"] = 22080;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
