--- a/log.html
+++ b/log.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,27498],[[4,5,6,0,[],[0,31,27461],[],[[7,0,1,0,[],[0,303,27186,8],[[1,9,10,0,0,0,0,0,[1,304,18327],[[0,11,12,0,13,14,0,0,[1,304,5542],[],[[305,2,15]]],[0,16,12,0,17,18,0,0,[1,5847,8616],[],[[5847,2,19]]],[0,20,12,0,21,0,0,0,[1,14463,4167],[],[]],[0,22,12,0,23,24,0,0,[1,18630,0],[],[]]],[]],[0,25,26,0,0,0,0,0,[0,18633,8855],[[0,27,12,0,28,29,0,0,[1,18633,2672],[],[[18634,2,30]]],[0,31,12,0,32,33,0,0,[1,21306,6176],[],[[21307,2,34],[26642,2,35]]],[0,36,12,0,37,38,0,0,[0,27483,4],[],[[27487,5,8]]]],[]]]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22053],[[4,5,6,0,[],[1,31,22014],[],[[7,0,1,0,[],[1,306,21734],[[1,8,9,0,0,0,0,0,[1,307,13798],[[0,10,11,0,12,13,0,0,[1,307,5638],[],[[307,2,14]]],[0,15,11,0,16,17,0,0,[1,5945,4008],[],[[5946,2,18]]],[0,19,11,0,20,0,0,0,[1,9953,4151],[],[]],[0,21,11,0,22,23,0,0,[1,14104,0],[],[]]],[]],[0,24,25,0,0,0,0,0,[1,14105,7095],[[0,26,11,0,27,28,0,0,[1,14106,2590],[],[[14106,2,29]]],[0,30,11,0,31,32,0,0,[1,16696,4504],[],[[16696,2,33],[20363,2,34]]]],[]],[0,35,25,0,0,0,0,0,[1,21202,836],[[0,36,11,0,37,38,0,0,[1,21203,835],[],[]]],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product","*Variable '${title}' not found. Did you mean:\n    ${titlt}","*Open Chrome To Storefront","*GlobalKeywords","*Create Webdriver","*SeleniumLibrary","*<p>Creates an instance of Selenium WebDriver.\x3c/p>","*Chrome","*Creating an instance of the Chrome WebDriver.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${STOREFRONT_URL}","*Opening url '<a href=\"http://automationpractice.com/\">http://automationpractice.com/\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*${DELAY}","*Given I Am Searching a Product","*SearchKeywords","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${search_box_home_page}, ${Prod}","*Typing text 'Dresses' into text field 'xpath=//input[@id='search_query_top']'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*${search_home_page_button}, ||13","*Sending key(s) ('||13',) to xpath=//button[@name='submit_search'] element.","*Sending keys ||13","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*${title}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product","*Open Chrome To Storefront","*GlobalKeywords","*Create Webdriver","*SeleniumLibrary","*<p>Creates an instance of Selenium WebDriver.\x3c/p>","*Chrome","*Creating an instance of the Chrome WebDriver.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${STOREFRONT_URL}","*Opening url '<a href=\"http://automationpractice.com/\">http://automationpractice.com/\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*${DELAY}","*Given I Am Searching a Product","*SearchKeywords","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${search_box_home_page}, ${Prod}","*Typing text 'Dresses' into text field 'xpath=//input[@id='search_query_top']'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*${search_home_page_button}, ||13","*Sending key(s) ('||13',) to xpath=//button[@name='submit_search'] element.","*Sending keys ||13","*Then Searching Is Successful","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${search_information}, ${TIMEOUT}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:27","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:27","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0},{"elapsed":"00:00:27","fail":1,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583413923657;
+window.output["baseMillis"] = 1583418313452;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27513;
+window.output["generated"] = 22080;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
