--- a/log.html
+++ b/log.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22192],[[4,5,6,0,[],[1,30,22149],[],[[7,0,1,0,[],[1,326,21848],[[1,8,9,0,0,0,0,0,[1,327,14134],[[0,10,11,0,12,13,0,0,[1,328,5579],[],[[328,2,14]]],[0,15,11,0,16,17,0,0,[1,5907,4372],[],[[5908,2,18]]],[0,19,11,0,20,0,0,0,[1,10280,4181],[],[]],[0,21,11,0,22,23,0,0,[1,14461,0],[],[]]],[]],[0,24,25,0,0,0,0,0,[1,14462,6871],[[0,26,11,0,27,28,0,0,[1,14462,2622],[],[[14463,2,29]]],[0,30,11,0,31,32,0,0,[1,17084,4248],[],[[17085,2,33],[20489,2,34]]]],[]],[0,35,25,0,0,0,0,0,[1,21334,839],[[0,36,11,0,37,38,0,0,[1,21335,837],[],[]]],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20555],[[4,5,6,0,[],[1,31,20516],[],[[7,0,1,0,[],[1,310,20232],[[1,8,9,0,0,0,0,0,[1,311,14096],[[0,10,11,0,12,13,0,0,[1,312,5615],[],[[312,2,14]]],[0,15,11,0,16,17,0,0,[1,5927,4275],[],[[5928,2,18]]],[0,19,11,0,20,0,0,0,[1,10203,4203],[],[]],[0,21,11,0,22,23,0,0,[1,14406,0],[],[]]],[]],[0,24,25,0,0,0,0,0,[1,14407,5291],[[0,26,11,0,27,28,0,0,[1,14408,1903],[],[[14409,2,29]]],[0,30,11,0,31,32,0,0,[1,16311,3387],[],[[16311,2,33]]]],[]],[0,34,25,0,0,0,0,0,[1,19700,840],[[0,35,11,0,36,37,0,0,[1,19701,839],[],[]]],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product","*Open Chrome To Storefront","*GlobalKeywords","*Create Webdriver","*SeleniumLibrary","*<p>Creates an instance of Selenium WebDriver.\x3c/p>","*Chrome","*Creating an instance of the Chrome WebDriver.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${STOREFRONT_URL}","*Opening url '<a href=\"http://automationpractice.com/\">http://automationpractice.com/\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*${DELAY}","*Given I Am Searching a Product","*SearchKeywords","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${search_box_home_page}, ${Prod}","*Typing text 'Dresses' into text field 'xpath=//input[@id='search_query_top']'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*${search_home_page_button}, ||13","*Sending key(s) ('||13',) to xpath=//button[@name='submit_search'] element.","*Sending keys ||13","*Then Searching Is Successful","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${search_information}, ${TIMEOUT}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*ChoosingSectionTest","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\ChoosingSectionTest.robot","*tests/ChoosingSectionTest.robot","*Scenario: Successful Choosing A Section","*Open Chrome To Storefront","*GlobalKeywords","*Create Webdriver","*SeleniumLibrary","*<p>Creates an instance of Selenium WebDriver.\x3c/p>","*Chrome","*Creating an instance of the Chrome WebDriver.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${STOREFRONT_URL}","*Opening url '<a href=\"http://automationpractice.com/\">http://automationpractice.com/\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*${DELAY}","*Given I Am Opening A Women Section","*ChoosingSectionKeywords","*Mouse Down","*<p>Simulates pressing the left mouse button on the element <code>locator\x3c/code>.\x3c/p>","*${women_button_home_page}","*Simulating Mouse Down on element 'xpath=//a[@title='Women']'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${blouses_element}","*Clicking element 'xpath=//a[@title='Blouses']'.","*Then Searching Is Successful","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${search_information_product}, ${TIMEOUT}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Tests.ChoosingSectionTest","name":"ChoosingSectionTest","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583419040160;
+window.output["baseMillis"] = 1583486859928;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22216;
+window.output["generated"] = 20586;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
