--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22192],[[4,5,6,0,[],[1,30,22149],[],[[7,0,1,0,[],[1,326,21848],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20555],[[4,5,6,0,[],[1,31,20516],[],[[7,0,1,0,[],[1,310,20232],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*Searchtests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\Searchtests.robot","*tests/Searchtests.robot","*Scenario: Successful Search Product"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*ChoosingSectionTest","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\ChoosingSectionTest.robot","*tests/ChoosingSectionTest.robot","*Scenario: Successful Choosing A Section"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Tests.Searchtests","name":"Searchtests","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Tests.ChoosingSectionTest","name":"ChoosingSectionTest","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583419040160;
+window.output["baseMillis"] = 1583486859928;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22216;
+window.output["generated"] = 20586;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
