--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20555],[[4,5,6,0,[],[1,31,20516],[],[[7,0,1,0,[],[1,310,20232],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,37998],[[4,5,6,0,[],[1,34,37954],[],[[7,0,1,0,[],[1,313,37670],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*ChoosingSectionTest","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\ChoosingSectionTest.robot","*tests/ChoosingSectionTest.robot","*Scenario: Successful Choosing A Section"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests","*tests","*SuccessfullyAddedToCartTests","*C:\\Users\\Techhuddle\\Documents\\Robot-Workshop\\tests\\SuccessfullyAddedToCartTests.robot","*tests/SuccessfullyAddedToCartTests.robot","*Scenario: Successful Added To Cart"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Tests.ChoosingSectionTest","name":"ChoosingSectionTest","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Tests.SuccessfullyAddedToCartTests","name":"SuccessfullyAddedToCartTests","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1583486859928;
+window.output["baseMillis"] = 1583506520488;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20586;
+window.output["generated"] = 38028;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
